force-app/main/default/objects/XFILES__Import__c/XFILES__Import__c.object-meta.xml
<CustomObject>
    <label>Data Import</label>
    <nameField>
        <displayFormat>FN-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Import</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>