force-app/main/default/objects/XFILES__Import__c/fields/XFILES__Is_Processed__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Is_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Processed</label>
    <type>Checkbox</type>
</CustomField>