force-app/main/default/objects/XFILES__Import__c/fields/XFILES__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>