force-app/main/default/objects/XFILES__Import__c/fields/XFILES__Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Owner_Id__c</fullName>
    <label>Owner Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>