force-app/main/default/objects/XFILES__Import__c/fields/XFILES__Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Parent_Id__c</fullName>
    <label>Parent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>