force-app/main/default/objects/XFILES__Import__c/fields/XFILES__Source_Path__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Source_Path__c</fullName>
    <label>Source Path</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>