force-app/main/default/objects/XFILES__Import__c/fields/XFILES__Target_Path__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Target_Path__c</fullName>
    <label>Target Path</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>